--- a/examples/spot_guide.ipynb
+++ b/examples/spot_guide.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "api_key = \"f622d835-efc3-4e7f-94e6-952be8fdaf8d\"\n",
     "secret_key = \"72b62c9868999910e312c8340b85390170e233fc\"\n",
-    "az = Spot(host=\"https://s-api.myaztests.com\", access_key=api_key, secret_key=secret_key)"
+    "az = Spot(host=\"https://s-api.azverse.xyz\", access_key=api_key, secret_key=secret_key)"
    ],
    "outputs": [],
    "execution_count": 4
