--- a/examples/future_guide.ipynb
+++ b/examples/future_guide.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "api_key = \"f622d835-efc3-4e7f-94e6-952be8fdaf8d\"\n",
     "secret_key = \"72b62c9868999910e312c8340b85390170e233fc\"\n",
-    "az = Perp(host=\"https://f-api.myaztests.com\", access_key=api_key, secret_key=secret_key)"
+    "az = Perp(host=\"https://f-api.azverse.xyz\", access_key=api_key, secret_key=secret_key)"
    ],
    "outputs": [],
    "execution_count": 7
